# video2ai

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Formula/: video2ai.rb
video2ai/: __init__.py  cli.py  clip_match.py  contact_sheet.py  embed.py  frames.py  llm.py  output.py  probe.py  transcribe.py  vision.py  web.py
