[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video2ai"
version = "0.1.0"
description = "Convert video to AI-ingestable format (frames + transcript + LLM analysis)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sameep Rehlan" },
]
keywords = ["video", "ai", "transcription", "frames", "whisper", "apple-vision", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",

    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai-whisper",
    "Pillow",
    "numpy",
    "flask",
]

[project.optional-dependencies]
vision = [
    "pyobjc-framework-Vision",
    "pyobjc-framework-CoreML",
    "pyobjc-framework-Quartz",
]

[project.urls]
Homepage = "https://github.com/sameeeeeeep/video2ai"
Repository = "https://github.com/sameeeeeeep/video2ai"
Issues = "https://github.com/sameeeeeeep/video2ai/issues"

[project.scripts]
video2ai = "video2ai.cli:main"

[tool.setuptools.packages.find]
include = ["video2ai*"]
